Бинарные файлы в runScript: чтение байтами и запись (#247)
* Бинарные файлы в runScript: чтение байтами и запись

Скрипт видел бинарный файл в листинге, но не мог с ним ничего сделать:
kb.read декодировал содержимое как UTF-8 и на бинарном отказывал, а другого
пути к байтам не было. Добавлена байтовая половина API, симметричная текстовой.

Чтение:
- kb.stat(path) — размер, бинарность, язык, без чтения содержимого;
- kb.readBytes(path[, offset, length]) — массив чисел 0..255;
- kb.readBase64(path[, offset, length]) — те же байты строкой;
- kb.hash(path) — sha-256 потоком, 64 символа на файл любого размера.

Чтение идёт окнами: за вызов отдаётся не больше 256 КБ, потому что байт
доезжает до скрипта JS-числом. GitService.getFileBytes читает позиционно
(SeekableByteChannel), поэтому стоимость вызова следует за окном, а не за
размером файла — файл, который в прогон не помещается, обрабатывается по кускам.

Запись (только когда правки вообще привязаны, те же три согласия):
- kb.writeBytes(path, data) — заменить содержимое целиком;
- kb.createBytes(path, data) — создать файл из байт;
data — base64 или массив байт, то есть ровно то, что возвращают чтения.

Точечной правки в бинарном файле нет намеренно: контракт kb.edit держится на
дословном фрагменте, а смещение в байтах такого подтверждения не даёт. Правило
«править можно только увиденное» сохраняется; kb.stat и kb.hash за просмотр не
считаются — ни размер, ни контрольная сумма содержимого не показывают.

PendingWrite стал sealed-интерфейсом (TextWrite | BinaryWrite): текст
применяется прежним путём с построчным диффом, байты — через новые
GitService.replaceTrackedBytes / createBinaryFile. У бинарной правки диффа нет,
вместо него ответ самого git: «Binary files ... differ» и два размера.

kb.read остался текстовым — отдавать испорченную строку хуже, чем отказать, —
но теперь отказ называет методы, которыми файл читается по-настоящему.

Обновлены руководство модели (все четыре половины), описание тула, комментарии
конфига,